; ModuleID = '/home/carl/AnghaBench/mimikatz/modules/extr_kull_m_cred.c_kull_m_cred_CredPersist.c'
source_filename = "/home/carl/AnghaBench/mimikatz/modules/extr_kull_m_cred.c_kull_m_cred_CredPersist.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@kull_m_cred_CredPersistToStrings = common dso_local global i8** null, align 8
@.str = private unnamed_addr constant [2 x i32] [i32 63, i32 0], align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @kull_m_cred_CredPersist(i64 %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  %4 = load i64, i64* %3, align 8
  %5 = load i8**, i8*** @kull_m_cred_CredPersistToStrings, align 8
  %6 = call i64 @ARRAYSIZE(i8** %5)
  %7 = icmp ult i64 %4, %6
  br i1 %7, label %8, label %13

8:                                                ; preds = %1
  %9 = load i8**, i8*** @kull_m_cred_CredPersistToStrings, align 8
  %10 = load i64, i64* %3, align 8
  %11 = getelementptr inbounds i8*, i8** %9, i64 %10
  %12 = load i8*, i8** %11, align 8
  store i8* %12, i8** %2, align 8
  br label %14

13:                                               ; preds = %1
  store i8* bitcast ([2 x i32]* @.str to i8*), i8** %2, align 8
  br label %14

14:                                               ; preds = %13, %8
  %15 = load i8*, i8** %2, align 8
  ret i8* %15
}

declare dso_local i64 @ARRAYSIZE(i8**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
